fix the media queries css and align button icons

--- a/color-game/src/main.css
+++ b/color-game/src/main.css
@@ -1,21 +1,29 @@
-* {
+*, *::before, *::after {
     box-sizing: border-box;
 }
 
-html,
-body {
-    height: 100%;
+* {
+    margin: 0;
+    padding: 0;
+}
+
+html {
+    color-scheme: dark light;
 }
 
 body {
-    /* display: grid; */
+    min-height: 100vh;
     place-items: center;
-    margin: 0;
-    /* padding: 0 24px; */
     color: #1a1a1a;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
         'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
     animation: gradient 10s infinite alternate linear;
+}
+
+img, picture, svg, video {
+    display: block;
+    max-width: 100%;
+    object-fit: cover;
 }
 
 /* @media (width >=500px) {
