--- a/color-game/src/modules/ColorGame.module.css
+++ b/color-game/src/modules/ColorGame.module.css
@@ -2,11 +2,11 @@
     display: flex;
     justify-content: center;
     position: fixed;
-    /* z-index: 3; */
     top: 50%;
     left: 50%;
     translate: -50% -50%;
     flex-wrap: wrap;
+    gap: 10px;
     width: 100%;
     min-width: 400px;
     max-width: 700px;
@@ -96,9 +96,9 @@ button {
     }
 }
 
-button .option {
+.option {
     align-items: center;
-    justify-content: right;
+    justify-content: space-evenly;
     margin-right: 0.5rem;
 }
 
@@ -115,15 +115,15 @@ button:disabled {
 }
 
 button .icon {
-    position: absolute;
-    top: 25%;
-    left: 10%;
+    position: relative;
+    /* top: 25%;
+    left: 10%; */
 }
 
 button>img {
     position: absolute;
     top: 15%;
-    left: 5%;
+    left: 40%;
     width: 40px;
     height: 40px;
 }
@@ -149,18 +149,17 @@ button>img {
     justify-content: center;
     align-items: center;
     height: 20px;
+    min-width: 190px;
+    text-align: center;
     color: darkgray
 }
 
 
 .loadgame {
-    height: 20px;
-    color: darkgray;
-}
-
-p {
     width: 100%;
+    height: 20px;
     text-align: center;
+    color: darkgray;
 }
 
 .highlight {
@@ -169,21 +168,21 @@ p {
 }
 
 button>p {
-    text-align: right;
-    margin-right: 10%;
+    /* text-align: right;
+    margin-right: 10%; */
 }
 
-.emoji {
+.header {
     display: flex;
     background: rgb(0, 0, 0);
     width: 100%;
     justify-content: center;
-    padding: 25px 25px 25px 0px;
+    padding: 20px 20px 25px 0;
     border-radius: 15px;
     box-shadow: 0 8px 32px 0 #000000;
 }
 
-.emoji img {
+.header img {
     font-size: 3rem;
     width: 183px;
     height: 200px;
@@ -192,7 +191,12 @@ button>p {
 .stat img {
     width: 30px;
     height: 30px;
-    object-fit: cover;
+}
+
+@media (max-width: 540px) {
+    .box {
+        font-size: 2.5em;
+    }
 }
 
 @media (max-width: 450px) {
@@ -205,7 +209,7 @@ button>p {
     }
 
     button {
-        max-width: 170px;
+        max-width: 160px;
         font-size: 1.3rem;
     }
 }
@@ -217,20 +221,20 @@ button>p {
     }
 
     .close {
-        top: 10%;
+        top: 20%;
     }
 
-    .emoji {
+    .header {
         height: 110px;
         padding: 10px 10px 10px 0px;
     }
 
-    .emoji img {
+    .header img {
         max-width: 50px;
         max-height: 80px;
     }
 
-    .emoji div {
+    .header div {
         display: flex;
         flex-direction: column;
         justify-content: center;
